--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "compileCSS": "gulp",
     "commit": "git add . && git commit -m",
     "push": "git push --follow-tags",
-    "build": "tsc && git add . && git commit -m",
+    "build": "git add . && git commit -m",
     "test": "git push --follow-tag",
     "gulp": "gulp ",
-    "twatch": "tsc",
+    "twatch": "tsc -w",
     "tag": "var=\"$(git tag -a -m \" v$npm_package_version release\" v$npm_package_version)\" [ \"$var\" == \"fatal: tag 'v1.0.0' already exists\" ] && echo tag exists || git push --follow-tags",
     "comTag": "git push --follow-tag"
   },
