--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
   },
-  "exclude": ["/node_modules/*"],
+  "exclude": ["**/node_modules/*"],
   "include": ["src/ts/*"]
 }
